integration firebase for create an account, register, login, reset password, 2FA
