# app/modules/auth/domain/contracts/local_user.repository.ts
@@ -1,0 +1,7 @@
+export interface LocalUserRepository {
+  ensureUserProfile(payload: {
+    firstname: string
+    lastname: string
+    email: string
+  }): Promise<void>
+}
